--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -31,6 +32,7 @@
     "agentkeepalive": "^4.1.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
