last commit before moving to mikro-orm

--- a/package.json
+++ b/package.json
@@ -10,46 +10,32 @@
   "author": "Niklas Gschaider <niklas.gschaider@gschaider-systems.at>",
   "license": "ISC",
   "devDependencies": {
-    "@decorators/express": "^2.5.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/express-http-proxy": "^1.6.1",
-    "@types/express-ws": "^3.0.0",
     "@types/global-agent": "^2.1.0",
-    "@types/http-proxy": "^1.17.5",
-    "@types/jsdom": "^16.2.10",
     "@types/node": "^15.0.2",
     "@types/request-promise": "^4.1.47",
-    "express-http-proxy": "^1.6.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "agentkeepalive": "^4.1.4",
+    "@decorators/express": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
-    "express-ws": "^4.0.0",
     "fs": "*",
     "global-agent": "^2.2.0",
-    "http-proxy": "^1.18.1",
-    "http-proxy-middleware": "^2.0.0",
-    "https-proxy-agent": "^5.0.0",
-    "jsdom": "^16.5.3",
+    "http-proxy": "file:../../node-http-proxy",
     "mysql": "^2.18.1",
     "querystring": "^0.2.1",
-    "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "trumpet": "^1.7.2",
     "typeorm": "^0.2.32"
   }
 }
