--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/cors": "^2.8.10",
     "@types/global-agent": "^2.1.0",
     "@types/node": "^15.0.2",
+    "@types/oauth2-server": "^3.0.12",
+    "@types/oidc-provider": "^7.4.0",
     "@types/request-promise": "^4.1.47",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -34,6 +36,9 @@
     "global-agent": "^2.2.0",
     "http-proxy": "file:../../node-http-proxy",
     "mysql": "^2.18.1",
+    "node-oauth2-server": "^2.4.0",
+    "oauth2-server": "^3.1.1",
+    "oidc-provider": "^7.4.1",
     "querystring": "^0.2.1",
     "request-promise": "^4.2.6",
     "typeorm": "^0.2.32"
