--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -w src --ext ts --exec 'ts-node src/index.ts'",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "build": "npx tsc"
   },
   "author": "Niklas Gschaider <niklas.gschaider@gschaider-systems.at>",
   "license": "ISC",
