--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "express": "^4.17.1",
     "fs": "*",
     "global-agent": "^2.2.0",
-    "http-proxy": "file:../../node-http-proxy",
+    "http-proxy": "github:ngschaider/node-http-proxy",
     "mysql": "^2.18.1",
     "node-oauth2-server": "^2.4.0",
     "oauth2-server": "^3.1.1",
