--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development DB_HOST=192.168.0.82 DB_USERNAME=gsys-proxy DB_PASSWORD=GsysProxy01! nodemon -w src --ext ts --exec 'ts-node src/index.ts'",
+    "dev": "NODE_ENV=development DB_NAME=gsys-proxy-dev DB_HOST=192.168.0.82 DB_USERNAME=gsys-proxy-dev DB_PASSWORD=GsysProxyDev01! nodemon -w src --ext ts --exec 'ts-node src/index.ts'",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "build": "npx tsc"
   },
