--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development DB_NAME=gsys-proxy-dev DB_HOST=192.168.0.82 DB_USERNAME=gsys-proxy-dev DB_PASSWORD=GsysProxyDev01! nodemon -w src --ext ts --exec 'ts-node src/index.ts'",
+    "dev": "nodemon -w src --ext ts --exec 'ts-node src/index.ts'",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "build": "npx tsc"
   },
@@ -12,33 +12,33 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cookie": "^0.4.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/global-agent": "^2.1.0",
-    "@types/node": "^15.0.2",
-    "@types/oauth2-server": "^3.0.12",
-    "@types/oidc-provider": "^7.4.0",
-    "@types/request-promise": "^4.1.47",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.4"
+    "@types/cookie": "^0.5.1",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/global-agent": "^2.1.1",
+    "@types/node": "^18.11.18",
+    "@types/oauth2-server": "^3.0.13",
+    "@types/oidc-provider": "^8.1.0",
+    "@types/request-promise": "^4.1.48",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@decorators/express": "^2.5.0",
+    "@decorators/express": "^2.8.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cookie": "^0.4.0",
-    "cookie-parser": "^1.4.5",
+    "body-parser": "^1.20.1",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "email-validator": "^2.0.4",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "fs": "*",
-    "global-agent": "^2.2.0",
+    "global-agent": "^3.0.0",
     "http-proxy": "github:ngschaider/node-http-proxy",
     "mysql": "^2.18.1",
     "querystring": "^0.2.1",
     "request-promise": "^4.2.6",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.3.11"
   }
 }
